--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" href="/img/favicon.ico" />
+        <link rel="stylesheet" href="/css/_reset.scss" />
         <title>Model 3 | Tesla</title>
     </head>
-    <body>
-
-        
-    </body>
+    <body></body>
 </html>
