--- a/index.html
+++ b/index.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" href="/img/favicon.ico" />
-        <link rel="stylesheet" href="/css/_reset.scss" />
-        <title>Model 3 | Tesla</title>
-    </head>
-    <body></body>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/img/favicon.ico" />
+    <link rel="stylesheet" href="/css/_reset.scss" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <title>Model 3 | Tesla</title>
+</head>
+
+<body>
+    <div class="main-canvas">
+
+        <div class="header-wrapper">
+            <header>
+                <h1 class="logo"></h1>
+                <nav>
+                    <ol>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ol>
+                    <ol>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ol>
+                </nav>
+            </header>
+        </div>
+
+    </div>
+</body>
+
 </html>
