--- a/index.html
+++ b/index.html
@@ -24,25 +24,55 @@
 									d="M0 .1a9.7 9.7 0 0 0 7 7h11l.5.1v27.6h6.8V7.3L26 7h11a9.8 9.8 0 0 0 7-7H0zm238.6 0h-6.8v34.8H263a9.7 9.7 0 0 0 6-6.8h-30.3V0zm-52.3 6.8c3.6-1 6.6-3.8 7.4-6.9l-38.1.1v20.6h31.1v7.2h-24.4a13.6 13.6 0 0 0-8.7 7h39.9v-21h-31.2v-7h24zm116.2 28h6.7v-14h24.6v14h6.7v-21h-38zM85.3 7h26a9.6 9.6 0 0 0 7.1-7H78.3a9.6 9.6 0 0 0 7 7zm0 13.8h26a9.6 9.6 0 0 0 7.1-7H78.3a9.6 9.6 0 0 0 7 7zm0 14.1h26a9.6 9.6 0 0 0 7.1-7H78.3a9.6 9.6 0 0 0 7 7zM308.5 7h26a9.6 9.6 0 0 0 7-7h-40a9.6 9.6 0 0 0 7 7z"
 									fill="currentColor"></path>
 							</svg></a></h1>
-					<nav>
-						<ol class="nav-center">
-							<li><a href="#">Model S</a></li>
-							<li><a href="#">Model 3</a></li>
-							<li><a href="#">Model X</a></li>
-							<li><a href="#">Model Y</a></li>
-							<li><a href="#">Solar Roof</a></li>
-							<li><a href="#">Solar Panels</a></li>
-						</ol>
-						<ol class="nav-end">
-							<li><a href="#">Shop</a></li>
-							<li><a href="#">Account</a></li>
-							<li><a href="#">Menu</a></li>
-						</ol>
-					</nav>
+					<ol class="nav-center">
+						<li><a href="#">Model S</a></li>
+						<li><a href="#">Model 3</a></li>
+						<li><a href="#">Model X</a></li>
+						<li><a href="#">Model Y</a></li>
+						<li><a href="#">Solar Roof</a></li>
+						<li><a href="#">Solar Panels</a></li>
+					</ol>
+					<ol class="nav-end">
+						<li><a href="#">Shop</a></li>
+						<li><a href="#">Account</a></li>
+						<li><a href="#">Menu</a></li>
+					</ol>
 				</header>
+
 			</div>
 		</div>
 
+		<main id="main-content">
+			<div class="layout-content">
+				<section class="showcase" id="model3">
+					<div class="bg-fs-img">
+						<img src="/img/Model-3-Main-Hero-Desktop-LHD.jpeg"
+							alt="Birds-eye view of red Model 3 on gray asphalt ">
+					</div>
+					<div class="hero-content">
+						<h1>Model 3</h1>
+						<p>
+							<a href=""></a>
+						</p>
+						<div class="hero-end">
+							<section class="badge">
+								<section class="badge-seedometer">
+									<div class="dial"></div>
+									<div class="digits"></div>
+								</section>
+								<p></p>
+							</section>
+							<section class="badge"></section>
+							<section class="badge"></section>
+						</div>
+					</div>
+				</section>
+
+				<section class="showcase" id="safety">
+				</section>
+
+			</div>
+		</main>
 	</div>
 </body>
 
