fix antialiasing font, start showcase

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<div class="hero-content">
 						<h1>Model 3</h1>
 						<p>
-							<a href=""></a>
+							<a href="#">Schedule a Demo Drive</a>
 						</p>
 						<div class="hero-end">
 							<section class="badge">
