--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="icon" href="/img/favicon.ico" />
-	<link rel="stylesheet" href="/css/_reset.scss" />
-	<link rel="stylesheet" href="/css/style.css" />
+	<link rel="icon" href="./img/favicon.ico" />
+	<link rel="stylesheet" href="./css/_reset.scss" />
+	<link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
