fix relative filenames

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<div class="layout-content">
 				<section class="showcase" id="model3">
 					<div class="bg-fs-img">
-						<img src="/img/Model-3-Main-Hero-Desktop-LHD.jpeg"
+						<img src="./img/Model-3-Main-Hero-Desktop-LHD.jpeg"
 							alt="Birds-eye view of red Model 3 on gray asphalt ">
 					</div>
 					<div class="hero-content">
